✨ 动态主题切换

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,18 @@
 @import './theme.scss';
+@font-face {
+  font-family: 'Lato';
+  src: url('~@/assets/fonts/Lato-Regular.ttf');
+  /* 可以包括更多字体格式和字体描述 */
+  font-weight: normal;
+  font-style: normal;
+}
+$font-family:
+  'Lato',
+  -apple-system,
+  'Microsoft YaHei',
+  'sans-serif';
 body {
+  font-family: $font-family;
   position: relative;
   transition:
     background-color 0.3s,
