--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,9 +6,6 @@ $padding: 8px;
 body {
   font-family: $font-family;
   position: relative;
-  transition:
-    background-color 0.3s,
-    color 0.3s;
   // 样式规则，使用混合应用当前模式和主题的样式
   @include useTheme {
     background-color: getModeVar('bgColor');
@@ -59,7 +56,7 @@ body {
 }
 
 .flex-card {
-  flex: 0 0 calc(25% - 2 * $padding); // 使用#{}插值
+  flex: 0 0 calc(25% - 2 * $padding);
 }
 
 /* 2xl */
@@ -73,7 +70,7 @@ body {
 /* lg */
 @media (max-width: 1024px) {
   .flex-card {
-    flex: 0 0 calc(50% - #{$padding}); // 在中等屏幕上每行显示2个
+    flex: 0 0 calc(50% - #{$padding}); // 在中等屏幕上每行显示2个 使用#{}插值
   }
   .flex-cards {
     &_left,
