refactor:  ♻️ 重构登录页

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,7 +8,7 @@ body {
   position: relative;
   // 样式规则，使用混合应用当前模式和主题的样式
   @include useTheme {
-    background-color: getModeVar('bgColor');
+    background: getModeVar('bgColor');
     color: getModeVar('infoColor');
   }
 }
