--- a/src/styles/variables.module.scss
+++ b/src/styles/variables.module.scss
@@ -1,7 +1,7 @@
 :root {
   --primary: #ff5733;
   --info: #ff5733;
-  --header-height: 64px;
+  --header-height: 56px; // header高度推荐: 48+n*8
 }
 $jalapenoRed: #b71540;
 $pumpkin: #d35400;
