--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,7 +2,16 @@
 @import './animation.scss';
 @import './antDesign.scss';
 $padding: 8px;
-
+// html {
+//   .gray {
+//     -webkit-filter: grayscale(100%);
+//     -moz-filter: grayscale(100%);
+//     -ms-filter: grayscale(100%);
+//     -o-filter: grayscale(100%);
+//     filter: grayscale(100%);
+//     filter: progid:DXImageTransform.Microsoft.BasicImage(grayscale=1);
+//   }
+// }
 body {
   font-family: $font-family;
   position: relative;
