--- a/src/styles/antd/index.scss
+++ b/src/styles/antd/index.scss
@@ -3,6 +3,7 @@
   height: var(--header-height);
   line-height: var(--header-height);
 }
+
 .ant-layout {
   font-family: $font-family;
 
@@ -60,6 +61,27 @@
     &::-webkit-resizer {
       display: none;
     }
+
+    .ant-table-body {
+      &::-webkit-scrollbar {
+        height: 8px;
+        width: 0;
+        overflow-y: auto;
+      }
+
+      &::-webkit-scrollbar-thumb {
+        border-radius: 4px;
+        background: gray;
+      }
+
+      &::-webkit-scrollbar-track {
+        border-radius: 0;
+        background: #1d4176;
+      }
+    }
   }
 
 }
+
+
+
