--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -2,7 +2,7 @@
 // 定义字体
 @font-face {
   font-family: 'Lato';
-  src: url('../assets/fonts/Lato-Regular.ttf');
+  src: url('https://cdn.jsdelivr.net/gh/xoxosos/jsDelivr/assets/fonts/Lato-Regular.ttf');
   /* 可以包括更多字体格式和字体描述 */
   font-weight: normal;
   font-style: normal;
