--- a/src/styles/antd/index.scss
+++ b/src/styles/antd/index.scss
@@ -5,18 +5,20 @@
   .ant-layout-header {
     height: var(--header-height);
     line-height: var(--header-height);
+
     .ant-menu {
       border: none;
     }
   }
 
   .layout-content {
-    overflow-x: hidden;
-    overflow-y: auto;
+    overflow: hidden auto;
+
     // margin: 41px 0 0;
+
     /* ---滚动条公共样式--- */
 
-    /*定义滚动条宽高及背景，宽高分别对应横竖滚动条的尺寸*/
+    /* 定义滚动条宽高及背景，宽高分别对应横竖滚动条的尺寸 */
     // 滚动条整体部分
     &::-webkit-scrollbar {
       width: 6px;
@@ -26,6 +28,7 @@
     &::-webkit-scrollbar-track {
       width: 6px;
       height: 6px;
+
       // background: rgb(239, 239, 239);
       border-radius: 2px;
     }
@@ -37,16 +40,16 @@
 
     // 滚动条里面的小方块，能向上向下移动（或往左往右移动，取决于是垂直滚动条还是水平滚动条）
     &::-webkit-scrollbar-thumb {
+      cursor: pointer;
       // @include useTheme {
       //   background: getColor('primary');
       // }
-      background-color: rgba(144, 147, 153, 0.3);
-      cursor: pointer;
+      background-color: rgb(144 147 153 / 30%);
       border-radius: 4px;
       transition: 0.3s background-color;
 
       &:hover {
-        background-color: rgba(144, 147, 153, 0.5);
+        background-color: rgb(144 147 153 / 50%);
       }
     }
 
@@ -61,21 +64,24 @@
     }
   }
 }
+
 .scroll-table {
   .ant-table-content {
     &::-webkit-scrollbar {
+      width: 0;
       height: 8px;
-      width: 0px;
       overflow-y: auto;
     }
+
     &::-webkit-scrollbar-thumb {
-      border-radius: 4px;
       background: var(--primary);
+      border-radius: 4px;
     }
+
     &::-webkit-scrollbar-track {
-      -webkit-box-shadow: 0;
+      background: rgb(144 147 153 / 30%);
       border-radius: 0;
-      background: rgba(144, 147, 153, 0.3);
+      box-shadow: 0;
     }
   }
 }
