--- a/src/styles/variables.module.scss
+++ b/src/styles/variables.module.scss
@@ -5,8 +5,8 @@
 }
 
 $chineseRed: #ed0000;
-$jalapenoRed: #D01144;
-$pumpkin: #E85827;
+$jalapenoRed: #d01144;
+$pumpkin: #e85827;
 $sunFlower: #f1c40f;
 $turquoise: #1abc9c;
 $pureApple: #41ae3c;
