--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -27,7 +27,69 @@ body {
   font-family: $font-family, Consolas, Menlo, Monaco, 'Courier New', 'PingFang SC', 'Microsoft YaHei', monospace;
 }
 
-.custom-layout {
+.layout-main {
+  min-width: 375px;
+  height: 100vh;
+}
+
+.layout-content {
+  overflow: hidden auto;
+
+  // margin: 41px 0 0;
+
+  /* ---滚动条公共样式--- */
+  &::-webkit-scrollbar {
+    width: 6px;
+    height: 8px;
+  }
+
+  &::-webkit-scrollbar-track {
+    width: 6px;
+    height: 6px;
+
+    // background: rgb(239, 239, 239);
+
+    border-radius: 2px;
+  }
+
+  // 滚动条的轨道的两端按钮，允许通过点击微调小方块的位置。
+
+  &::-webkit-scrollbar-button {
+    display: none;
+  }
+
+  // 滚动条里面的小方块，能向上向下移动（或往左往右移动，取决于是垂直滚动条还是水平滚动条）
+
+  &::-webkit-scrollbar-thumb {
+    cursor: pointer;
+
+    // @include useTheme {
+    //   background: getColor('primary');
+    // }
+
+    background-color: rgb(144 147 153 / 30%);
+    border-radius: 4px;
+    transition: 0.3s background-color;
+
+    &:hover {
+      background-color: rgb(144 147 153 / 50%);
+    }
+  }
+
+  // 边角，即两个滚动条的交汇处
+
+  &::-webkit-scrollbar-corner {
+    display: none;
+  }
+
+  // 两个滚动条的交汇处上用于通过拖动调整元素大小的小控件
+
+  &::-webkit-resizer {
+    display: none;
+  }
+}
+
+.custom-drawer {
   @include use-theme {
     background: get-mode-var('bgColor');
   }
@@ -86,12 +148,4 @@ body {
       width: 100%;
     }
   }
-}
-
-.ant-drawer:has(.ant-layout-sider) {
-  @include respond-to('md') {
-    display: inline-block;
-  }
-
-  display: none;
 }
